--- a/src/styles/theme/colors.scss
+++ b/src/styles/theme/colors.scss
@@ -1,42 +1,11 @@
 $color-white: #fff;
 
-$color-grey-f358: #f3f5f8;
-$color-grey-ed: #ededed;
-$color-grey-e78c: #e7e8ec;
-$color-grey-de: #dedede;
-$color-grey-da: #dadada;
-$color-grey-d0: #d0d0d0;
-$color-grey-c: #ccc;
-$color-grey-4f: #4f4f4f;
-$color-grey-2ecf: #2e2c2f;
-$color-grey-1b: #1b1b1b;
-$color-grey-09c2: #090c02;
+$color-sand: #ffdf8c;
+$gray-line: #f6f6f6;
+$orange: #fe5f1e;
 
-$color-french-grey: #c5c7cd;
-$color-french-grey-a30: #c5c7cd4d;
-$color-santas-grey: #979dac;
+$container-width: 90%;
+
+$duration: 0.15s;
 
 $color-black: #000;
-$color-black-a80: rgba(0, 0, 0, 0.8);
-$color-black-a70: rgba(0, 0, 0, 0.07);
-$color-black-a60: rgba(0, 0, 0, 0.6);
-$color-black-a40: rgba(0, 0, 0, 0.4);
-$color-black-a20: rgba(0, 0, 0, 0.2);
-$color-black-a0: rgba(0, 0, 0, 0);
-
-$color-red: #ef2b23;
-$color-orange: #f66e08;
-$color-pastel-green: #6fd454;
-$color-picton-blue: #29baf0;
-$color-butterfly-blue: #2aabee;
-$color-metallic-seaweed: #028090;
-$color-midnight-blue: #002366;
-
-$color-telegram: #229ed9;
-$color-whatsapp: #25d366;
-
-$shadow-standard-a06: 0px 10px 34px rgba(8, 15, 52, 0.06);
-$shadow-standard-a10: 0px 10px 34px rgba(8, 15, 52, 0.1);
-$shadow-standard-a12: 0px 10px 34px rgba(8, 15, 52, 0.12);
-
-$shadow-picton-blue: 0px 0px 1px 1px $color-picton-blue;
