--- a/src/styles/theme/colors.scss
+++ b/src/styles/theme/colors.scss
@@ -1,8 +1,15 @@
-$color-white: #fff;
 
+
+$color-white: #fff;
 $color-sand: #ffdf8c;
 $gray-line: #f6f6f6;
 $orange: #fe5f1e;
+$color-light-green: #E2EDCF;
+$color-purple: #DED5EA;
+$color-dark-red: #A0151A;
+$color-brown: #4F3E34;
+$color-blue: #2C216F;
+
 
 $container-width: 90%;
 
