--- a/src/styles/theme/colors.scss
+++ b/src/styles/theme/colors.scss
@@ -2,17 +2,18 @@
 
 $color-white: #fff;
 $color-sand: #ffdf8c;
-$gray-line: #f6f6f6;
+$gray-line: #f6f6f6; // TODO fix names
 $orange: #fe5f1e;
 $color-light-green: #E2EDCF;
 $color-purple: #DED5EA;
 $color-dark-red: #A0151A;
 $color-brown: #4F3E34;
 $color-blue: #2C216F;
-
+$color-black: #000;
+$color-layout-blue: rgba(0, 60, 118, 0.75);
+$color-layout-dark-blue: rgba(0, 60, 118, 1);
 
 $container-width: 90%;
 
 $duration: 0.15s;
 
-$color-black: #000;
