--- a/src/styles/theme/colors.scss
+++ b/src/styles/theme/colors.scss
@@ -1,5 +1,6 @@
 $color-white: #fff;
 
+$color-light-grey: #FAFBFC;
 $color-grey-f358: #f3f5f8;
 $color-grey-ed: #ededed;
 $color-grey-e78c: #e7e8ec;
@@ -11,6 +12,7 @@ $color-grey-4f: #4f4f4f;
 $color-grey-2ecf: #2e2c2f;
 $color-grey-1b: #1b1b1b;
 $color-grey-09c2: #090c02;
+$color-shadow: #003C7626;
 
 $color-french-grey: #c5c7cd;
 $color-french-grey-a30: #c5c7cd4d;
@@ -28,6 +30,7 @@ $color-red: #ef2b23;
 $color-orange: #f66e08;
 $color-pastel-green: #6fd454;
 $color-picton-blue: #29baf0;
+$color-blue: #00B7EB;
 $color-butterfly-blue: #2aabee;
 $color-metallic-seaweed: #028090;
 $color-midnight-blue: #002366;
