--- a/src/features/Layout/Layout.module.scss
+++ b/src/features/Layout/Layout.module.scss
@@ -3,6 +3,10 @@
 .container {
   width: 100%;
   min-height: calc(100vh - 604px);
+  margin-top: 72px;
+}
+.collapsed {
+  margin-top: 40px;
 }
 
 .content {
