--- a/src/styles/theme/colors.scss
+++ b/src/styles/theme/colors.scss
@@ -1,3 +1,5 @@
+$container-width: 90%;
+$duration: 0.15s;
 
 
 $color-white: #fff;
@@ -12,8 +14,7 @@ $color-blue: #2C216F;
 $color-black: #000;
 $color-layout-blue: rgba(0, 60, 118, 0.75);
 $color-layout-dark-blue: rgba(0, 60, 118, 1);
+$color-modal-bg: #C4C4C4;
+$color-modal-header: #F2F5F8;
 
-$container-width: 90%;
-
-$duration: 0.15s;
 
