--- a/src/styles/theme/fonts.scss
+++ b/src/styles/theme/fonts.scss
@@ -5,11 +5,7 @@ $fw-semibold: 600;
 $fw-bold: 700;
 $fw-extrabold: 800;
 
-$font-Pangram: Pangram, Montserrat, -apple-system, BlinkMacSystemFont, Segoe UI,
-  Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
-  sans-serif;
-
-$font-Inter: Inter, Montserrat, -apple-system, BlinkMacSystemFont, Segoe UI,
+$font-Lato: Lato, Montserrat, -apple-system, BlinkMacSystemFont, Segoe UI,
   Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
   sans-serif;
 
