--- a/src/pages/TermsPage/TermsPage.module.scss
+++ b/src/pages/TermsPage/TermsPage.module.scss
@@ -38,7 +38,8 @@
     align-items: center;
     padding: 12px 32px;
     gap: 8px;
-    font-weight: 500;
+    font-weight: 700;
+    font-family: $font-Lato;
     outline: none;
 }
 .tabList {
@@ -57,16 +58,20 @@
     right: 0px;
     position: absolute;
     font-size: 13px;
+    font-family: $font-Lato;
 }
 
 .title {
     top: 210px;
     position: relative;
     
-    h1 {
-        font-size: 56px;
-    }
-    p {
-        padding-top: 16px;
-    }
+h1 {
+    font-size: 56px;
+    font-family: $font-Lato;
+
+}
+p {
+    padding-top: 16px;
+    font-family: $font-Lato;
+}
 }
