--- a/src/features/Layout/Layout.module.scss
+++ b/src/features/Layout/Layout.module.scss
@@ -4,15 +4,19 @@
   width: 100%;
   min-height: calc(100vh - 604px);
   margin-top: 72px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: $color-light-grey;
+  position: relative;
 }
 .collapsed {
   margin-top: 40px;
 }
 
 .content {
-  padding-top: 40px;
   min-height: 600px;
-
 }
 
 .wrapper {
