--- a/src/styles/theme/colors.scss
+++ b/src/styles/theme/colors.scss
@@ -1,20 +1,23 @@
 $container-width: 90%;
 $duration: 0.15s;
 
-
 $color-white: #fff;
 $color-sand: #ffdf8c;
 $gray-line: #f6f6f6; // TODO fix names
+$color-light-grey: #fafbfc;
 $orange: #fe5f1e;
-$color-light-green: #E2EDCF;
-$color-purple: #DED5EA;
-$color-dark-red: #A0151A;
-$color-brown: #4F3E34;
-$color-blue: #2C216F;
+$color-light-green: #e2edcf;
+$color-purple: #ded5ea;
+$color-dark-red: #a0151a;
+$color-brown: #4f3e34;
+$color-blue: #2c216f;
 $color-black: #000;
 $color-layout-blue: rgba(0, 60, 118, 0.75);
 $color-layout-dark-blue: rgba(0, 60, 118, 1);
-$color-modal-bg: #C4C4C4;
-$color-modal-header: #F2F5F8;
-
-
+$color-modal-bg: #c4c4c4;
+$color-modal-header: #f2f5f8; // TODO rename
+$color-light-grey: #fafbfc;
+$color-shadow: #003c7626; // TODO rename
+$color-dark-blue: #003c76;
+$color-brochure-placeholder: #c3c6c9;
+$color-light-green: #6fcf97;
