add button, add brochure counter

--- a/src/pages/BrochuresPage/BrochureCard/BrochureCard.module.scss
+++ b/src/pages/BrochuresPage/BrochureCard/BrochureCard.module.scss
@@ -34,7 +34,7 @@
   align-items: center;
   height: 48px;
   border-radius: 0 0 16px 16px;
-  background-color: $color-dark-blue;
+  background-color: $color-primary;
   color: $color-white;
   font-family: Lato;
   font-size: 12px;
@@ -48,5 +48,5 @@
   right: 16px;
   bottom: 30px;
   font-size: 18px;
-  color: $color-dark-blue;
+  color: $color-primary;
 }
