--- a/src/styles/theme/colors.scss
+++ b/src/styles/theme/colors.scss
@@ -11,13 +11,14 @@ $color-purple: #ded5ea;
 $color-dark-red: #a0151a;
 $color-brown: #4f3e34;
 $color-blue: #2c216f;
-$color-black: #000;
+$color-black: #1b242d;
 $color-layout-blue: rgba(0, 60, 118, 0.75);
 $color-layout-dark-blue: rgba(0, 60, 118, 1);
 $color-modal-bg: #c4c4c4;
 $color-modal-header: #f2f5f8; // TODO rename
 $color-light-grey: #fafbfc;
 $color-shadow: #003c7626; // TODO rename
-$color-dark-blue: #003c76;
+$color-primary: #003c76;
+$color-secondary: #0abaee;
 $color-brochure-placeholder: #c3c6c9;
 $color-light-green: #6fcf97;
