--- a/src/styles/theme/colors.scss
+++ b/src/styles/theme/colors.scss
@@ -18,3 +18,14 @@ $color-modal-bg: #C4C4C4;
 $color-modal-header: #F2F5F8;
 
 
+
+
+
+// import airport from '/public/assets/images/airport__footer.svg';
+// import reisegarantie from '/public/assets/images/reisegarantie__footer.svg';
+// import srv from '/public/assets/images/srv__footer.svg';
+// import tps from '/public/assets/images/tps__footer.svg';
+
+// import fb from '/public/assets/images/facebook__footer.svg'; // по аналогии сделай
+// import ig from '/public/assets/images/instagram__footer.svg'; //instagram
+// import lk from '/public/assets/images/linkedIn__footer.svg'; //linkedin
