--- a/src/styles/theme/colors.scss
+++ b/src/styles/theme/colors.scss
@@ -20,5 +20,5 @@ $color-light-grey: #fafbfc;
 $color-shadow: #003c7626; // TODO rename
 $color-primary: #003c76;
 $color-secondary: #0abaee;
-$color-brochure-placeholder: #c3c6c9;
+$color-placeholder: #c3c6c9;
 $color-light-green: #6fcf97;
