--- a/src/pages/BrochuresPage/BrochuresPage.module.scss
+++ b/src/pages/BrochuresPage/BrochuresPage.module.scss
@@ -29,7 +29,7 @@
   justify-content: space-between;
   margin-bottom: 50px;
 }
-.selectBtn {
+.noSelectBtn {
   border-radius: 8px;
   width: 250px;
   height: 40px;
@@ -39,8 +39,11 @@
   font-family: Lato;
   font-size: 14px;
   font-weight: $fw-regular;
-  color: $color-brochure-placeholder;
+  color: $color-placeholder;
   border: 1px solid $color-modal-header;
+}
+.selectBtn {
+  width: 250px;
 }
 .sort {
   font-family: Lato;
