add send modal unfinished

--- a/src/styles/theme/colors.scss
+++ b/src/styles/theme/colors.scss
@@ -22,3 +22,4 @@ $color-primary: #003c76;
 $color-secondary: #0abaee;
 $color-placeholder: #c3c6c9;
 $color-light-green: #6fcf97;
+$color-bright-green: #27ae60;
