--- a/src/features/SendBrochuresModal/Card/Card.module.scss
+++ b/src/features/SendBrochuresModal/Card/Card.module.scss
@@ -16,8 +16,8 @@
   width: 10px;
   border-radius: 50%;
   background-color: $color-bright-green;
-  border: 1px solid $color-bright-green;
-  outline-offset: 2px;
+  border: 1px solid $color-white;
+  outline: 1px solid $color-bright-green;
   z-index: 2;
 }
 .image {
