--- a/src/components/Radio/Radio.module.scss
+++ b/src/components/Radio/Radio.module.scss
@@ -20,7 +20,8 @@
       width: $checkbox-size;
       height: $checkbox-size;
       background-color: $color-white;
-      border: 1px solid $color-checkbox-gray;
+      border: 1px solid $color-white;
+      outline: 1px solid $color-checkbox-gray;
       border-radius: 50%;
       transform: translate(0, -50%);
       transition: ease-in-out 0.3s;
