--- a/src/pages/BrochuresPage/BrochuresPage.module.scss
+++ b/src/pages/BrochuresPage/BrochuresPage.module.scss
@@ -53,7 +53,10 @@
 }
 .brochuresList {
   display: flex;
-  justify-content: space-between;
+  justify-content: start;
   margin: 12px 0;
   flex-wrap: wrap;
+  & div:not(:last-child) {
+    margin-right: 24px;
+  }
 }
