--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -40,3 +40,11 @@ p {
   margin-top: 0;
   margin-bottom: 0;
 }
+
+input {
+  border: none;
+  &:focus-visible,
+  &:focus {
+    outline: none;
+  }
+}
