add travel contact form unfinished

--- a/src/styles/theme/colors.scss
+++ b/src/styles/theme/colors.scss
@@ -7,6 +7,7 @@ $gray-line: #f6f6f6; // TODO fix names
 $color-light-grey: #fafbfc;
 $orange: #fe5f1e;
 $color-light-green: #e2edcf;
+$color-olive: #e2edcf;
 $color-purple: #ded5ea;
 $color-dark-red: #a0151a;
 $color-brown: #4f3e34;
