--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -8,7 +8,18 @@
   border-radius: 8px;
   padding-top: 8px;
 }
-
+.shorten {
+  height: 33px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  & .icon {
+    bottom: 6px;
+  }
+}
+.numberInput {
+  height: 40px;
+}
 .label {
   font-family: Lato;
   font-size: 12px;
@@ -29,6 +40,4 @@
   position: absolute;
   bottom: 8px;
   right: 9px;
-}
-.shorten {
 }
