--- a/src/pages/BlogsPage/BlogsPage.module.scss
+++ b/src/pages/BlogsPage/BlogsPage.module.scss
@@ -3,8 +3,7 @@
 .page {
     height: 100%;
     width: 100%;
-    margin: 0;
-    padding: 0;
+    position: relative;
 }
 .pictures {
     width: 100vw;
@@ -13,7 +12,8 @@
     background-repeat: no-repeat;
 }
 .button {
-    background-color: #0ABAEE;
+    background-color: $color-secondary;
+    cursor: pointer;
 }
 
 .blogs {
@@ -38,22 +38,25 @@
             & > h3 {
                 font-size: 44px;
                 font-family: $font-Lato;
-                color: #1B242D;
+                color: $color-black;
             }
             & > p {
                 font-size: 14px;
-                color: #1B242D;
+                color: $color-black;
             }
         }
         .image {
             top: 100px;
+            image-rendering: optimizeSpeed;
             & > span {
                 border-radius: 8px;
+            image-rendering: optimizeSpeed;
+
             }
             & > div{
                 width: 515px;
                 height: 508px;
-                background-color: #F2F5F8;
+                background-color: $color-modal-header;
                 position: absolute;
                 top: 0;
                 right: 0;
@@ -80,23 +83,24 @@
             & > h3 {
                 font-size: 44px;
                 font-family: $font-Lato;
-                color: #1B242D;
+                color: $color-black;
             }
             & > p {
                 font-size: 14px;
-                color: #1B242D;
+                color: $color-black;
             }
         }
         .image {
             top: 100px;
             left: 134px;
+            image-rendering: optimizeQuality;
             & > span {
                 border-radius: 8px;
             }
             & > div{
                 width: 515px;
                 height: 508px;
-                background-color: #F2F5F8;
+                background-color: $color-modal-header;
                 position: absolute;
                 top: 0;
                 left: 0;
@@ -106,8 +110,9 @@
 }
 .reviews {
     height: 512px;
-    background: #F2F5F8;
+    background: $color-modal-header;
     padding-top: 48px;
+    overflow-x: scroll;
     
 
     .title {
@@ -117,7 +122,7 @@
         flex-direction: column;
         & > h3 {
             font-family: $font-Lato;
-            color: #1B242D;
+            color: $color-black;
         }
         & > p {
             padding-top: 8px;
@@ -136,12 +141,15 @@
 }
 .contact {
     background: url('../../../public/assets/images/blogs/Frame 442.jpg');
+    background-repeat: no-repeat;
     height: 512px;
+    width: 100%;
     position: relative;
     & > button {
         width: 113px;
         height: 40px;
         position: absolute;
+        cursor: pointer;
         top: 316px;
         left: 663px;
     }
