--- a/src/styles/theme/colors.scss
+++ b/src/styles/theme/colors.scss
@@ -20,5 +20,5 @@ $color-layout-blue: rgba(0, 60, 118, 0.75);
 $color-layout-dark-blue: rgba(0, 60, 118, 1);
 $color-modal-bg: #C4C4C4;
 $color-modal-header: #F2F5F8;
-
+$color-primary: #0ABAEE;
 
