add selectors, add region selection logic, create destinations list ui

--- a/src/styles/theme/colors.scss
+++ b/src/styles/theme/colors.scss
@@ -25,3 +25,5 @@ $color-placeholder: #c3c6c9;
 $color-checkbox-gray: #9c9ea1;
 $color-light-green: #6fcf97;
 $color-bright-green: #27ae60;
+$color-laros-light-grey: #f2f5f8;
+$color-lazur: #00b7eb;
