--- a/src/styles/theme/colors.scss
+++ b/src/styles/theme/colors.scss
@@ -27,3 +27,4 @@ $color-light-green: #6fcf97;
 $color-bright-green: #27ae60;
 $color-laros-light-grey: #f2f5f8;
 $color-lazur: #00b7eb;
+$color-about-tabs: #f2f5f8;
