--- a/src/features/Footer/Footer.module.scss
+++ b/src/features/Footer/Footer.module.scss
@@ -1,19 +1,19 @@
 .footer {
   width: 100%;
-  max-height: 320px;
   border-top: 1px solid #e1e2e3;
+  background: #FAFBFC;
+  box-shadow: inset 0px 0.5px 0px rgba(0, 0, 0, 0.1);
 }
 
 .content {
   display: flex;
+  justify-content: center;
+  background: #FAFBFC;
 }
 
 .partners {
-  background-color: #f8f9fb;
-  padding-left: 80px;
-  padding-bottom: 80px;
-  padding-top: 71.2px;
-  padding-right: 80px;
+  padding: 71.2px 80px 80px;
+  background: rgba(242, 245, 248, 0.3);
 }
 .blockImg {
   display: flex;
@@ -55,19 +55,17 @@
 .listLinks {
   display: flex;
   flex-wrap: wrap;
+  padding-left: 0;
 }
 
 .itemLink {
-  margin-right: 40px;
   list-style: none;
 }
 
 .link {
-  font-weight: 400;
   font-size: 12px;
   line-height: 14px;
-  margin-right: 25px;
-
+  margin-right: 30px;
   color: rgba(27, 36, 45, 0.55);
 }
 
@@ -86,6 +84,11 @@
 .listInfo {
   display: flex;
   justify-content: space-between;
+  margin-top:50px;
+  padding-right: 65px;
+  ul {
+    padding-left: 0;
+  }
 }
 
 .socialList {
@@ -112,11 +115,16 @@
 
 .navList {
   display: flex;
+  margin:0;
   // margin-left: 80px;
 }
 
 .navItem {
   color: #f2f5f8;
+  list-style-type: none;
+  &:last-child .navLink {
+    border-right:0;
+  }
 }
 
 .navLink {
@@ -124,6 +132,8 @@
   font-weight: 400;
   font-size: 10px;
   line-height: 12px;
+  border-right: 1px solid #f2f5f8;
+  padding: 0 15px;
 }
 
 .divideLine {
