--- a/src/pages/BlogsPage/BlogsPage.module.scss
+++ b/src/pages/BlogsPage/BlogsPage.module.scss
@@ -1,156 +1,159 @@
 @use '/src/styles/style.scss' as *;
 
 .page {
-    height: 100%;
-    width: 100%;
-    position: relative;
+  height: 100%;
+  width: 100%;
+  position: relative;
 }
 .pictures {
-    width: 100vw;
-    height: 580px;
-    background-image: url('../../../public/assets/images/blogs/Rectangle 93 (3) (1).jpg');
-    background-repeat: no-repeat;
+  width: 100%;
+  height: 668px;
+  background: url('../../../public/assets/images/blogs/blogs-bg.jpg') center;
+  background-size: cover;
 }
+
 .button {
-    background-color: $color-secondary;
-    cursor: pointer;
+  background-color: $color-secondary;
+  cursor: pointer;
+  width: 134px;
+}
+
+.blogTitle {
+  font-size: 52px;
+  font-family: $font-Corinthia;
+  line-height: 40px;
+  color: $color-brochure-placeholder;
 }
 
 .blogs {
-    background: $color-white;
-    width: 100vw;
+  background: $color-white;
+  width: 100vw;
+  position: relative;
+  .firstBlog {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    height: 720px;
+    background-color: $color-white;
+
+    .content {
+      width: 543px;
+      & > * {
+        margin: 32px 0;
+      }
+      & > h3 {
+        font-size: 44px;
+        line-height: 53px;
+        font-family: $font-Lato;
+        color: $color-black;
+      }
+      & > p {
+        font-size: 14px;
+        line-height: 24px;
+        color: $color-black;
+      }
+    }
+    .image {
+      top: 100px;
+      image-rendering: optimizeSpeed;
+      & > span {
+        border-radius: 8px;
+        image-rendering: optimizeSpeed;
+      }
+      & > div {
+        width: 515px;
+        height: 508px;
+        background-color: $color-modal-header;
+        position: absolute;
+        top: 0;
+        right: 0;
+      }
+    }
+  }
+  .secondBlog {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: row-reverse;
+    height: 720px;
+    background-color: $color-white;
     position: relative;
-    .firstBlog {
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
-        height: 720px;
-        background-color: $color-white;
 
-        .content {
-            width: 543px;
-            & > * {
-                margin: 32px;
-            }
-            & > h2 {
-                font-size: 32px;
-            }
-            & > h3 {
-                font-size: 44px;
-                font-family: $font-Lato;
-                color: $color-black;
-            }
-            & > p {
-                font-size: 14px;
-                color: $color-black;
-            }
-        }
-        .image {
-            top: 100px;
-            image-rendering: optimizeSpeed;
-            & > span {
-                border-radius: 8px;
-            image-rendering: optimizeSpeed;
-
-            }
-            & > div{
-                width: 515px;
-                height: 508px;
-                background-color: $color-modal-header;
-                position: absolute;
-                top: 0;
-                right: 0;
-            }
-        }
+    .content {
+      width: 543px;
+      & > * {
+        margin: 32px;
+      }
+      & > h3 {
+        font-size: 44px;
+        font-family: $font-Lato;
+        color: $color-black;
+      }
+      & > p {
+        font-size: 14px;
+        color: $color-black;
+      }
     }
-    .secondBlog {
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
-        flex-direction: row-reverse;
-        height: 720px;
-        background-color: $color-white;
-        position: relative;
-
-        .content {
-            width: 543px;
-            & > * {
-                margin: 32px;
-            }
-            & > h2 {
-                font-size: 32px;
-            }
-            & > h3 {
-                font-size: 44px;
-                font-family: $font-Lato;
-                color: $color-black;
-            }
-            & > p {
-                font-size: 14px;
-                color: $color-black;
-            }
-        }
-        .image {
-            top: 100px;
-            left: 134px;
-            image-rendering: optimizeQuality;
-            & > span {
-                border-radius: 8px;
-            }
-            & > div{
-                width: 515px;
-                height: 508px;
-                background-color: $color-modal-header;
-                position: absolute;
-                top: 0;
-                left: 0;
-            }
-        }
+    .image {
+      top: 100px;
+      left: 134px;
+      image-rendering: optimizeQuality;
+      & > span {
+        border-radius: 8px;
+      }
+      & > div {
+        width: 515px;
+        height: 508px;
+        background-color: $color-modal-header;
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
     }
+  }
 }
 .reviews {
-    height: 512px;
-    background: $color-modal-header;
-    padding-top: 48px;
-    overflow-x: scroll;
-    
+  height: 512px;
+  background: $color-modal-header;
+  padding-top: 48px;
+  overflow-x: scroll;
 
-    .title {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        & > h3 {
-            font-family: $font-Lato;
-            color: $color-black;
-        }
-        & > p {
-            padding-top: 8px;
-        }
+  .title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    & > h3 {
+      font-family: $font-Lato;
+      color: $color-black;
     }
-    .review{
-        position: relative;
-        top: 64px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        & > div {
-            margin: 12px;
-        }
+    & > p {
+      padding-top: 8px;
     }
+  }
+  .review {
+    position: relative;
+    top: 64px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    & > div {
+      margin: 12px;
+    }
+  }
 }
 .contact {
-    background: url('../../../public/assets/images/blogs/Frame 442.jpg');
-    background-repeat: no-repeat;
-    height: 512px;
-    width: 100%;
-    position: relative;
-    & > button {
-        width: 113px;
-        height: 40px;
-        position: absolute;
-        cursor: pointer;
-        top: 316px;
-        left: 663px;
-    }
+  background: url('../../../public/assets/images/blogs/Frame 442.jpg') center;
+  background-size: cover;
+  height: 512px;
+  width: 100%;
+  position: relative;
+  & > button {
+    width: 113px;
+    position: absolute;
+    top: 68%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    cursor: pointer;
+  }
 }
