--- a/src/styles/theme/fonts.scss
+++ b/src/styles/theme/fonts.scss
@@ -12,3 +12,6 @@ $font-Lato: Lato, Montserrat, -apple-system, BlinkMacSystemFont, Segoe UI,
 $font-Montserrat: Montserrat, -apple-system, BlinkMacSystemFont, Segoe UI,
   Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
   sans-serif;
+
+$font-Corinthia: Corinthia, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+  Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
