add worldwide page without BG

--- a/src/styles/theme/colors.scss
+++ b/src/styles/theme/colors.scss
@@ -28,3 +28,4 @@ $color-bright-green: #27ae60;
 $color-laros-light-grey: #f2f5f8;
 $color-lazur: #00b7eb;
 $color-about-tabs: #f2f5f8;
+$color-orange: #f2994a;
