--- a/src/features/DestinationLayout/DestionationsList/DestinationsList.module.scss
+++ b/src/features/DestinationLayout/DestionationsList/DestinationsList.module.scss
@@ -2,6 +2,7 @@
 .list {
   background-color: $color-laros-light-grey;
   overflow-y: scroll;
+  margin-top: 40px;
 }
 .item {
   font-size: 12px;
@@ -17,8 +18,10 @@
 .active {
   background-color: $color-white;
   font-weight: $fw-semibold;
+  position: relative;
   &:after {
     content: '';
+    position: absolute;
     background-color: $color-lazur;
     width: 2px;
     height: 100%;
