--- a/src/pages/CareerPage/JobCard/JobCard.module.scss
+++ b/src/pages/CareerPage/JobCard/JobCard.module.scss
@@ -9,21 +9,21 @@
 
 .title {
   margin-bottom: 5px;
-  color: #1B242D;
+  color: $color-black;
   font-size: 14px;
   line-height: 20px;
 }
 
 .time {
   margin-bottom: 24px;
-  color: #C3C6C9;
+  color: $color-placeholder;
   font-size: 12px;
   line-height: 20px;
 }
 
 .description {
   margin-bottom: 22px;
-  color: #1B242D;
+  color: $color-black;
   font-size: 12px;
   line-height: 20px;
 }
@@ -33,21 +33,5 @@
 }
 
 .applyButton {
-  color: white;
-  padding: 13px 21px;
   margin-right: 20px;
-  background-color: #003C76;
-  border-radius: 8px;
-  border: none;
-  cursor: pointer;
-}
-
-.infoButton {
-  color: #1B242D;
-  padding: 0 20px;
-  font-size: 12px;
-  line-height: 20px;
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
 }
