--- a/src/features/Review/Review.module.scss
+++ b/src/features/Review/Review.module.scss
@@ -1,56 +1,58 @@
 @use '/src/styles/style.scss' as *;
 
 .review {
-    width: 519px;
-    height: 240px;
-    background: #FAFBFC;
-    box-shadow: 0px 18px 18px rgba(0, 60, 118, 0.05);
-    border-radius: 16px;
-    position: relative;
+  width: 519px;
+  height: 240px;
+  background: $color-light-grey;
+  box-shadow: 0px 18px 18px rgba(0, 60, 118, 0.05);
+  border-radius: 16px;
+  position: relative;
 }
 .profile {
-    position: relative;
-    top: 34px;
-    left: 40px;
-    display: flex;
-    
-    & > span {
-        border-radius: 20px;
-    }
+  position: relative;
+  top: 34px;
+  left: 40px;
+  display: flex;
 
-    .info {
-        margin: 0;
-        padding-left: 12px;
-        & > li {
-            list-style: none;
-        }
-        position: relative;
-}
-& > ul > li.name {
-        font-weight: 600;
-        color: #1B242D;
-        font-size: 16px;
-        font-family: $font-Lato;
-    
-}
-& > ul > li.tripname {
+  & > span {
+    border-radius: 20px;
+  }
+
+  .info {
+    margin: 0;
+    padding-left: 12px;
+    & > li {
+      list-style: none;
+    }
+    position: relative;
+  }
+  & > ul > li.name {
+    font-weight: 600;
+    color: $color-black;
+    font-size: 16px;
+    line-height: 20px;
+    font-family: $font-Lato;
+    margin-bottom: 6px;
+  }
+  & > ul > li.tripname {
     font-family: 'Lato';
     font-style: normal;
     font-weight: 400;
-    color: #C3C6C9;
+    color: $color-brochure-placeholder;
     font-size: 12px;
-
-}
-
+  }
 }
 .comments {
-    position: absolute;
-    top: 108px;
-    left: 92px;
-    font-size: 13px;
+  position: absolute;
+  top: 108px;
+  left: 92px;
+  font-family: 'Lato';
+  font-size: 12px;
+  line-height: 20px;
+  max-width: 387px;
 }
 .icon {
-    position: absolute;
-    top: 40px;
-    right: 40px;
+  position: absolute;
+  top: 40px;
+  right: 40px;
 }
