--- a/src/pages/Team/EmployeCard/EmployeCard.module.scss
+++ b/src/pages/Team/EmployeCard/EmployeCard.module.scss
@@ -3,33 +3,34 @@
 .wrapper {
   width: 302px;
   margin: 0 0 20px 0;
+}
+.photo {
+  width: 302px;
+  height: 320px;
+  border-radius: 8px;
+}
 
-  .photo {
-    width: 302px;
-    height: 320px;
-    border-radius: 8px;
-  }
+.text {
+  max-width: 260px;
+  margin-top: 24px;
+  margin-right: auto;
+  margin-left: auto;
+}
 
-  .text {
-    max-width: 260px;
-    margin: 24px auto 0 auto;
+.name {
+  font-weight: $fw-medium;
+  font-size: 20px;
+  margin-bottom: 8px;
+}
 
-    .name {
-      font-weight: 500;
-      font-size: 20px;
-      margin: 0 0 8px 0;
-    }
+.post {
+  font-weight: $fw-regular;
+  font-size: 14px;
+  margin-bottom: 8px;
+}
 
-    .post {
-      font-weight: 400;
-      font-size: 14px;
-      margin: 0 0 8px 0;
-    }
-
-    .desc {
-      font-weight: 400;
-      font-size: 12px;
-      opacity: 0.5;
-    }
-  }
+.desc {
+  font-weight: $fw-regular;
+  font-size: 12px;
+  opacity: 0.5;
 }
