--- a/src/pages/Team/Team.module.scss
+++ b/src/pages/Team/Team.module.scss
@@ -3,26 +3,26 @@
 .wrapper {
   max-width: 1320px;
   margin: 80px auto;
+}
 
-  .text {
-    text-align: center;
-    margin: 0 0 51px 0;
+.text {
+  text-align: center;
+  margin: 0 0 51px 0;
+}
 
-    .title {
-      margin: 0 0 40px 0;
-    }
+.title {
+  margin: 0 0 40px 0;
+}
 
-    .desc {
-      font-weight: 400;
-      max-width: 850px;
-      font-size: 12px;
-      margin: 0 auto;
-    }
-  }
+.desc {
+  font-weight: $fw-regular;
+  max-width: 850px;
+  font-size: 12px;
+  margin: 0 auto;
+}
 
-  .items {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 37px;
-  }
+.items {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 37px;
 }
