--- a/src/styles/theme/colors.scss
+++ b/src/styles/theme/colors.scss
@@ -15,6 +15,7 @@ $color-blue: #2c216f;
 $color-black: #1b242d;
 $color-layout-blue: rgba(0, 60, 118, 0.75);
 $color-layout-dark-blue: rgba(0, 60, 118, 1);
+$color-white-blue: #0ABAEE;
 
 
 $color-modal-bg: #C4C4C4;
