--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -63,7 +63,7 @@ input[type='number'] {
 }
 
 .swiper {
-  padding-bottom: 32px;
+  padding-bottom: 48px !important;
 
   .swiper-button-next,
   .swiper-button-prev
