fix: feat__accordeon

--- a/src/pages/FAQPage/FAQPage.module.scss
+++ b/src/pages/FAQPage/FAQPage.module.scss
@@ -1,7 +1,7 @@
 @use '/src/styles/style.scss' as *;
 
-.faqcontent {
-  background-color: #fff;
+.faqContent {
+  background-color: $color-white;
   max-width: 1062px;
   margin: 0 auto;
   margin-top: 80px;
@@ -11,16 +11,17 @@
     align-items: center;
     text-align: center;
     font-size: 40px;
-    font-weight: 600;
+    font-weight: $fw-semibold;
   }
+}
 
-  .text {
-    width: 80%;
-    margin: 0 auto;
-    text-align: center;
-    line-height: 20px;
-    font-size: 12px;
-    font-weight: 400;
-    margin-bottom: 80px;
-  }
+.text {
+  width: 80%;
+  margin: 0 auto;
+  text-align: center;
+  line-height: 20px;
+  font-size: 12px;
+  font-weight: $fw-regular;
+  margin-bottom: 80px;
+  margin-top: 40px;
 }
