--- a/src/features/Tags/Tags.module.scss
+++ b/src/features/Tags/Tags.module.scss
@@ -28,6 +28,7 @@
   border-radius: 24px;
   padding: 4px 12px;
   cursor: pointer;
+  transition: 0.3s;
 
   &:hover {
     background: rgba($color-bg-black, 0.1);
