--- a/src/features/Header/SubNav/SubNav.module.scss
+++ b/src/features/Header/SubNav/SubNav.module.scss
@@ -5,9 +5,11 @@
     width: 100%;
     height: 40px;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     background-color: $color-layout-blue;
+    border: 1px solid;
+    margin: auto;
 }
 
 .item {
@@ -19,7 +21,9 @@
     color: $color-white;
     border-right: 1px solid $color-white;
     white-space: nowrap;
+    cursor: pointer;
 }
+
 .item:first-child {
     border-left: 1px solid $color-white;
 }
@@ -27,6 +31,7 @@
 .active {
     background-color: $color-layout-dark-blue;
 }
+
 .item:hover {
     background-color: $color-layout-dark-blue;
 }
