Feat  change accomodation modal (#22)
* add bg

* add step components, create layout

* refactor colors, add voucher reducer, add steps structure, add first form without styles

* update input number

* add address input, small css fixes

* complete voucher page without some styles and API

* Revert "add address input, small css fixes"

This reverts commit 701ee4084c9935d35d2dd8b452645782c2c78bd3.

* add change accomodation modal

* fix style rules

* add with counter into input, fix styles

--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -4,9 +4,10 @@
   position: relative;
   width: 100%;
   height: 55px;
-  border: 1px solid $color-modal-header;
+  border: 1px solid $color-laros-light-grey;
   border-radius: 8px;
   padding-top: 8px;
+  background-color: $color-white;
 }
 .shorten {
   height: 33px;
@@ -27,6 +28,7 @@
   padding: 0 8px 8px 8px;
 }
 .field {
+  width: 100%;
   font-size: 14px;
   font-weight: $fw-semibold;
   padding: 0 8px 8px 8px;
