--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -31,10 +31,10 @@
   border-radius: 15px 15px 0 0;
   width: 100%;
   height: 48px;
-  background-color: $color-modal-header;
+  background-color: $color-laros-light-grey;
   display: flex;
   justify-content: space-between;
-  padding: 15px 24px 0;
+  padding: 15px 24px 13px;
 }
 .title {
   font-weight: 400;
