--- a/src/features/SendBrochuresModal/SendBrochuresModal.module.scss
+++ b/src/features/SendBrochuresModal/SendBrochuresModal.module.scss
@@ -46,7 +46,7 @@
   position: relative;
   height: 89px;
   width: 676px;
-  border: 1px solid $color-modal-header;
+  border: 1px solid $color-laros-light-grey;
   border-radius: 8px;
   padding-top: 8px;
   margin-bottom: 8px;
