--- a/src/pages/BrochuresPage/BrochuresPage.module.scss
+++ b/src/pages/BrochuresPage/BrochuresPage.module.scss
@@ -40,7 +40,7 @@
   font-size: 14px;
   font-weight: $fw-regular;
   color: $color-placeholder;
-  border: 1px solid $color-modal-header;
+  border: 1px solid $color-laros-light-grey;
 }
 .selectBtn {
   width: 250px;
