--- a/src/features/AboutLayout/AboutLayout.module.scss
+++ b/src/features/AboutLayout/AboutLayout.module.scss
@@ -24,7 +24,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: $color-about-tabs;
+  background-color: $color-laros-light-grey;
   padding-top: 0;
   margin: 0;
 }
