--- a/src/features/ContactForm/ContactForm.module.scss
+++ b/src/features/ContactForm/ContactForm.module.scss
@@ -51,7 +51,7 @@
 }
 .infoItem {
   padding: 16px 16px 0;
-  background-color: $color-modal-header;
+  background-color: $color-laros-light-grey;
   border-radius: 8px;
   &:not(:last-child) {
     margin-bottom: 8px;
