--- a/src/styles/theme/colors.scss
+++ b/src/styles/theme/colors.scss
@@ -24,7 +24,6 @@ $color-modal-bg: #c4c4c4;
 $color-modal-header: #f2f5f8;
 
 $color-modal-bg: #c4c4c4;
-$color-modal-header: #f2f5f8; // TODO rename
 $color-light-grey: #fafbfc;
 $color-shadow: #003c7626; // TODO rename
 $color-primary: #003c76;
@@ -35,4 +34,5 @@ $color-light-green: #6fcf97;
 $color-bright-green: #27ae60;
 $color-laros-light-grey: #f2f5f8;
 $color-lazur: #00b7eb;
-$color-about-tabs: #f2f5f8;
+$color-blue-link: #0066eb; // Could't get real color from figma TODO
+$color-card-placeholder: #d9d9d9;
