--- a/src/pages/TravelPlannerPage/TravelPlannerPage.module.scss
+++ b/src/pages/TravelPlannerPage/TravelPlannerPage.module.scss
@@ -207,7 +207,7 @@
     line-height: 19px;
     text-align: center;
     text-transform: capitalize;
-    color: #$color-laros-light-grey;
+    color: $color-laros-light-grey;
   }
 }
 
@@ -217,6 +217,6 @@
   font-size: 12px;
   line-height: 17px;
   text-transform: capitalize;
-  color: #$color-laros-light-grey;
+  color: $color-laros-light-grey;
   margin: auto;
 }
