--- a/src/pages/DestinationWorldwidePage/DestinationWorldwidePage.module.scss
+++ b/src/pages/DestinationWorldwidePage/DestinationWorldwidePage.module.scss
@@ -1,14 +1,14 @@
 @use 'styles/style.scss' as *;
 .container {
-  width: 100%;
-  height: 100%;
   position: relative;
+  background-size: cover;
+  background-position: 25% 100%;
 }
 .content {
   position: absolute;
   top: 286px;
   left: 171px;
-  z-index: 3;
+  width: 416px;
 }
 .title {
   color: $color-white;
@@ -22,6 +22,7 @@
   font-size: 14px;
   font-weight: $fw-regular;
   line-height: 17px;
+  margin-bottom: 75px;
 }
 .actions {
   display: flex;
