--- a/src/styles/theme/colors.scss
+++ b/src/styles/theme/colors.scss
@@ -6,6 +6,8 @@ $color-white: #fff;
 $color-sand: #ffdf8c;
 $gray-line: #f6f6f6; // TODO fix names
 $color-light-grey: #fafbfc;
+$color-laros-light-grey: #c3c6c9;
+$color-laros-dark-grey: #9c9ea1;
 $orange: #fe5f1e;
 $color-light-green: #e2edcf;
 $color-olive: #e2edcf;
