add Contact Page

--- a/src/styles/theme/colors.scss
+++ b/src/styles/theme/colors.scss
@@ -40,3 +40,5 @@ $color-blue-link: #0066eb; // Could't get real color from figma TODO
 $color-card-placeholder: #d9d9d9;
 $color-about-tabs: #f2f5f8;
 $color-orange: #f2994a;
+
+$color-box-shadow: 0px 4px 12px rgba(27, 36, 45, 0.15);
