--- a/src/pages/ContactPage/ContactPage.module.scss
+++ b/src/pages/ContactPage/ContactPage.module.scss
@@ -9,14 +9,12 @@
 
 .container {
   max-width: 1280px;
-  margin: 0 auto;
-  position: relative;
-  top: -47px;
+  margin: 0 auto 80px;
 }
 
 .content {
+  margin-top: -47px;
   width: 100%;
-  height: 1005px;
   box-shadow: $color-box-shadow;
 }
 
@@ -24,7 +22,6 @@
   border-top-left-radius: 16px;
   border-top-right-radius: 16px;
   width: 100%;
-  height: 446px;
 }
 
 .mapWrapper {
