--- a/src/features/Review/Review.module.scss
+++ b/src/features/Review/Review.module.scss
@@ -3,10 +3,16 @@
 .review {
   width: 519px;
   height: 240px;
+  text-align: start;
   background: $color-light-grey;
-  box-shadow: 0px 18px 18px rgba(0, 60, 118, 0.05);
+  box-shadow: 0 18px 18px rgba(0, 60, 118, 0.05);
   border-radius: 16px;
   position: relative;
+  overflow: scroll;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 .profile {
   position: relative;
@@ -35,7 +41,7 @@
     margin-bottom: 6px;
   }
   & > ul > li.tripname {
-    font-family: 'Lato';
+    font-family: 'Lato', serif;
     font-style: normal;
     font-weight: 400;
     color: $color-brochure-placeholder;
@@ -46,10 +52,13 @@
   position: absolute;
   top: 108px;
   left: 92px;
-  font-family: 'Lato';
+  font-family: 'Lato', serif;
   font-size: 12px;
   line-height: 20px;
   max-width: 387px;
+}
+.comment {
+  margin-bottom: 40px;
 }
 .icon {
   position: absolute;
