add trip card (#25)
* add trip card

* Update src/shared/mocks/tripCards.ts

Co-authored-by: Martin Lee <72463518+martinLjs@users.noreply.github.com>

* some fixes

* Update src/pages/TravelPlannerPage/TripCard/TripCard.tsx

Co-authored-by: Martin Lee <72463518+martinLjs@users.noreply.github.com>

* some fixes

* icon, props refactor

Co-authored-by: Martin Lee <72463518+martinLjs@users.noreply.github.com>
Co-authored-by: Martin Li <martinhappy2017@icloud.com>

--- a/src/styles/theme/colors.scss
+++ b/src/styles/theme/colors.scss
@@ -16,6 +16,8 @@ $color-dark-red: #a0151a;
 $color-brown: #4f3e34;
 $color-blue: #2c216f;
 $color-black: #000;
+$color-primary-black: #1b242d;
+
 $color-light-black: #333;
 $color-bg-black: #1b242d;
 $color-layout-blue: rgba(0, 60, 118, 0.75);
@@ -39,4 +41,6 @@ $color-lazur: #00b7eb;
 $color-blue-link: #0066eb; // Could't get real color from figma TODO
 $color-card-placeholder: #d9d9d9;
 $color-about-tabs: #f2f5f8;
+$color-lazur-label: #2d9cdb;
+$color-blue-label: #2f80ed;
 $color-orange: #f2994a;
