--- a/src/components/Slider/Slider.module.scss
+++ b/src/components/Slider/Slider.module.scss
@@ -1,7 +1,7 @@
 .slider {
   text-align: center;
-  padding: 80px 0;
-
+  padding: 0;
+  margin: 0;
   .title {
     font-weight: 700;
     font-size: 16px;
