--- a/src/pages/TravelPlannerPage/TravelPlannerPage.module.scss
+++ b/src/pages/TravelPlannerPage/TravelPlannerPage.module.scss
@@ -1,10 +1,22 @@
 @use 'styles/style.scss' as *;
 
 .bg {
-  height: 500px;
+  height: 540px;
   width: 100%;
   background-size: cover;
-  object-position: -20% 0;
+  background-repeat: no-repeat;
+  background-position: center;
+  position: relative;
+
+  &::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
+    left: 0;
+    right: 0;
+  }
 }
 
 .container {
@@ -25,15 +37,14 @@
 
 .content {
   width: 1281px;
-  min-height: 1084px;
   background-color: $color-white;
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%, 0);
-  top: 320px;
   background-color: $color-white;
   box-shadow: 0px 4px 4px rgba(0, 60, 118, 0.15);
   border-radius: 16px;
+  margin: auto;
+  transform: translateY(-180px);
+  padding: 70px 85px;
+
 }
 
 /*----slider----*/
@@ -57,6 +68,7 @@
   font-size: 16px;
   line-height: 19px;
   color: #000000;
+  margin-bottom: 25px;
 }
 
 .slide__trip-title {
@@ -140,14 +152,15 @@
   font-size: 16px;
   line-height: 19px;
   color: #1b242d;
-  margin-left: 85px;
+  margin-bottom: 25px;
 }
 
 .categoriesList {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  padding: 24px 85px 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  transform: translateX(-40px);
+  row-gap: 34px;
+  column-gap: 24px;
 }
 
 .planner__list-item {
