--- a/src/features/ChangeTransferModal/CarCard/CarCard.module.scss
+++ b/src/features/ChangeTransferModal/CarCard/CarCard.module.scss
@@ -41,11 +41,16 @@
   margin-left: 7px;
 }
 .selectBtn {
-  font-size: 12px;
+  font-size: 11px;
   font-weight: $fw-bold;
   line-height: 14px;
   width: 100px;
+  border: 1px solid $color-light-green;
   background-color: $color-light-green;
+}
+.selectedCar {
+  background-color: $color-white;
+  color: $color-light-green;
 }
 .total {
   display: flex;
